--- a/dotnet/AxInterop.MSTSCLib/AxInterop.MSTSCLib.csproj
+++ b/dotnet/AxInterop.MSTSCLib/AxInterop.MSTSCLib.csproj
@@ -20,17 +20,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!--<Compile Remove="MSTSCLib/Legacy.cs" />-->
-    <Compile Remove="MSTSCLib/NetCore/*.cs" Condition="'$(TargetFramework)'=='net48'" />
-    <Compile Remove="MSTSCLib/Desktop/*.cs" Condition="'$(TargetFramework)'!='net48'" />
-    <Compile Remove="Binding/*.cs" Condition="'$(TargetFramework)'=='net48'" />
+    <Compile Remove="Generated/Classic.cs" />
+    <Compile Remove="*/Desktop/*.cs" Condition="'$(TargetFramework)'!='net48'" />
+    <Compile Remove="*/NetCore/*.cs" Condition="'$(TargetFramework)'=='net48'" />
+    <Compile Remove="MSTSCLib/*.cs" Condition="'$(TargetFramework)'=='net48'" />
   </ItemGroup>
 
   <ItemGroup>
-    <!--<None Include="MSTSCLib/Legacy.cs" />-->
-    <None Include="MSTSCLib/NetCore/*.cs" Condition="'$(TargetFramework)'=='net48'" />
-    <None Include="MSTSCLib/Desktop/*.cs" Condition="'$(TargetFramework)'!='net48'" />
-    <None Include="Binding/*.cs" Condition="'$(TargetFramework)'=='net48'" />
+    <None Include="Generated/Classic.cs" />
+    <None Include="*/Desktop/*.cs" Condition="'$(TargetFramework)'!='net48'" />
+    <None Include="*/NetCore/*.cs" Condition="'$(TargetFramework)'=='net48'" />
+    <None Include="MSTSCLib/*.cs" Condition="'$(TargetFramework)'=='net48'" />
   </ItemGroup>
 
   <!--<ItemGroup>
